--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.1",
     "supertest": "^7.0.0",
     "swagger-autogen": "^2.23.5",
     "swagger-ui-express": "^5.0.0"
