--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "socket.io": "^4.8.0",
